covid_report.htmlの修正

--- a/templates/covid_report.html
+++ b/templates/covid_report.html
@@ -27,6 +27,6 @@
         <button type="submit">送信</button>
     </form>
     <br>
-    <a href="{{ url_for('login1') }}">トップに戻る</a>
+    <a href="{{ url_for('index') }}">トップに戻る</a>
 </body>
 </html>
