--- a/templates/covid_complete.html
+++ b/templates/covid_complete.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>報告が完了しました</h1>
-    <a href="{{ url_for('index') }}">トップに戻る</a>
+    <a href="{{ url_for('top') }}">トップに戻る</a>
 </body>
 </html>
+
